[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "clmm"
dynamic = ["version"]
description = "A comprehensive package for galaxy cluster weak lensing"
readme = "README.md"
license = "bsd-3-clause"
requires-python = ">=3.8"
authors = [
    { name = "The LSST DESC CLMM Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
  "python==3.10.2",
  "pip>=21.0",
  "jupyter>=1.0",
  "numpy==1.25.2",
  "scipy==1.11.2",
  "astropy==5.3.2",
  "healpy == 1.16.5",
  "matplotlib==3.7.2",
  "gsl==2.7",
  "cmake==3.30.0",
  "pyccl==3.0",
  "numcosmo==0.18.2",
  "pytest==7.4.0",
  "sphinx==7.2.4",
  "qp-prob @ git+https://github.com/LSSTDESC/qp.git"
]



[project.urls]
Repository = "https://github.com/LSSTDESC/CLMM"

[tool.hatch.version]
path = "clmm/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/clmm",
]

[tool.black]
line-length  = 100

[tool.pylint]
max-line-length = 100
disable = ["R0913", "R0917"]
good-names = ["ra", "z", "z1", "z2", "a", "a1", "a2",
              "gt", "gx", "mu", "da", "i",
              "H0", "Omega_b0", "Omega_dm0", "Omega_k0",
              "h", "Omega_m", "Omega_b",
              "get_Omega_m", "get_E2", "get_E2Omega_m", 
              "_get_Omega_m", "_get_E2", "_get_E2Omega_m", 
              ]
max-public-methods = 30
ignored-modules = ["scipy.special"]

[tool.pylint.'DESIGN']
max-locals = 20
max-args = 20
