[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "clmm"
dynamic = ["version"]
description = "A comprehensive package for galaxy cluster weak lensing"
readme = "README.md"
license = "bsd-3-clause"
requires-python = ">=3.8"
authors = [{ name = "The LSST DESC CLMM Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "astropy>=4, !=5.0",
    "matplotlib",
    "numpy>=2.0",
    "scipy>=1.6",
    "healpy",
    "qp-prob",
]


[project.urls]
Repository = "https://github.com/LSSTDESC/CLMM"

[tool.hatch.version]
path = "clmm/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/clmm"]
